--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
+        <link rel="stylesheet" href="index.css">
         <title>My test page</title>
     </head>
 
     <body>
-        <img src="images/firefox-icon.png" alt="My test image" />
+
     </body>
 
 </html>
