--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
         <link rel="stylesheet" href="index.css">
-        <title>My test page</title>
+        <title>JOJO'S FANMADE CARD GAME</title>
+        <link rel="shortcut icon" href="../images/PAGE_ICON.png">
     </head>
 
     <body>
